rework of build system, enabling of caches

--- a/bare_metal/.project
+++ b/bare_metal/.project
@@ -3,6 +3,7 @@
 	<name>bare_metal</name>
 	<comment></comment>
 	<projects>
+		<project>qemu</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
